hard-gists/ef7ed11b0abab37c94ad/run.log
=== Docker Run Log for ef7ed11b0abab37c94ad ===
Started at: Mi 29. Okt 21:14:47 CET 2025

[2025-10-29 21:14:48] START: Running container for ef7ed11b0abab37c94ad
[2025-10-29 21:14:48] SUCCESS: Container b2eac4c5946bdc6e5ccbd5ec143fec1704eb9457be3617e04fb713a640526ad6 started for ef7ed11b0abab37c94ad
=== Container logs for ef7ed11b0abab37c94ad ===
  File "/snippet.py", line 47
    print 'Cluster [%s]:' % len(cluster)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ef7ed11b0abab37c94ad ===
[2025-10-29 21:14:50] INFO: Container b2eac4c5946bdc6e5ccbd5ec143fec1704eb9457be3617e04fb713a640526ad6 has stopped
